--- a/java/pom.xml
+++ b/java/pom.xml
@@ -24,6 +24,12 @@
 		<artifactId>junit</artifactId>
 		<version>4.13.1</version>
 	</dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
